RM-1830: Specify link colour inheritance to prevent it being hidden by problems with CSS themes.
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/BRANCHES/V2.3@94354 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

Mirrored from commit ef7d52acd95bdb60c261e7660dded60658ebf19f

--- a/rm-share/source/web/rm/components/console/rm-define-roles.css
+++ b/rm-share/source/web/rm/components/console/rm-define-roles.css
@@ -110,6 +110,7 @@
    display: block;
    padding: 0.333em;
    text-decoration: none;
+   color:inherit;
 }
 
 #manageRoles
